tests/golden/type_errors/nullable_argument_to_nonnullable.cd
fun takesNumber(value: number) { print value; }
let maybe: number? = 1;
takesNumber(maybe);
